2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_merge_targets, &do_one_merge_target): Don't
	work on targets handled by %dependencies.
	(&handle_factored_dependencies): Do it.
	* install.am: Install install-exec, install-data and uninstall's
	suites.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_merge_targets): Move `install-strip' from
	here...
	* install.am: to here.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (@installdirs): Remove.
	(&file_contents): Be able to grow Automake macros with `+='.
	(&handle_texinfo, &handle_man_pages, &am_install_var): Let your
	files define _am_installdirs.
	(&handle_installdirs): Remove the code, just output `install.am'.
	* install.am: New.
	* data.am, header.am, libs.am, lisp.am, ltlib.am, mans.am, progs.am,
	* python.am, scripts.am, texinfos.am: Extend $(_am_installdirs).

2001-02-26  Akim Demaille  <akim@epita.fr>

	* tests/instdata2.test (libexec_DATA): Exercise more
	possibilities.

2001-02-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* header-vars.am (INSTALL_STRIP_FLAG): Remove (obsolete).

2001-02-25  Tom Tromey  <tromey@redhat.com>

	* tests/instdata2.test: Added `sbin_DATA' check.

	* tests/Makefile.am (TESTS): Added subdircond.test.
	* tests/subdircond.test: New file.
	* automake.in (handle_gettext): Don't fail if SUBDIRS
	conditionally defined.

	* automake.in: Use IO::File.
	(generate_makefile): Use IO::File.
	(scan_texinfo_file): Likewise.
	(handle_aclocal_m4): Likewise.
	(scan_autoconf_traces): Likewise.
	(scan_one_autoconf_file): Likewise.
	(read_am_file): Likewise.
	(file_contents): Likewise.
	(create): Likewise.

2001-02-25  Akim Demaille  <akim@epita.fr>

	* automake.in (handle_texinfo): Remove code handled by texinfos.am.

2001-02-25  Akim Demaille  <akim@epita.fr>

	* automake.in (&transform): Also call &transform_cond on your
	arguments.
	(&handle_dist): Adjust.
	(&handle_factored_dependencies): Uniq dependencies.
