@@ -3643,8 +3643,6 @@ sub handle_merge_targets
 	$output_rules .= "install-binPROGRAMS: install-libLTLIBRARIES\n\n";
     }
     # Print definitions users can use.
-    &do_one_merge_target ('install', 'all-am');
-
     &do_one_merge_target ('all', @all);
 }
 
@@ -3678,13 +3676,6 @@ sub do_one_merge_target
       {
 	&pretty_print_rule ("$name-am:", "\t\t", @values);
       }
-    if ($name eq 'install')
-    {
-	# Special-case `install-am' to run install-exec-am and
-	# install-data-am after all-am is built.
-	&pretty_print_rule ("\t\@\$(MAKE) \$(AM_MAKEFLAGS)", "\t  ",
-			    'install-exec-am', 'install-data-am');
-    }
 
     # To understand this special case, see handle_merge_targets.
     if ($name eq 'all')
