@@ -36,16 +36,20 @@
 .PHONY: install install-exec install-data uninstall
 
 ?SUBDIRS?.PHONY: install-recursive install-exec-recursive install-data-recursive uninstall-recursive
-## FIXME: not ready: ?SUBDIRS?install: install-recursive
+?SUBDIRS?install: install-recursive
 ?SUBDIRS?install-exec: install-exec-recursive
 ?SUBDIRS?install-data: install-data-recursive
 ?SUBDIRS?uninstall: uninstall-recursive
 
-.PHONY: install-am install-exec-am install-data-am uninstall-am
-## FIXME: not ready: ?!SUBDIRS?install: install-am
+.PHONY: install-exec-am install-data-am uninstall-am
+?!SUBDIRS?install: install-am
 ?!SUBDIRS?install-exec: install-exec-am
 ?!SUBDIRS?install-data: install-data-am
 ?!SUBDIRS?uninstall: uninstall-am
+
+.PHONY: install-am
+install-am: all-am
+	@$(MAKE) $(AM_MAKEFLAGS) install-exec-am install-data-am
 
 ## If you ever modify this, keep in mind that INSTALL_PROGRAM is used
 ## in subdirectories, so never set it to a value relative to the top
