@@ -1,6 +1,12 @@
 2001-02-26  Akim Demaille  <akim@epita.fr>
 
 	* automake.in (&handle_merge_targets, &do_one_merge_target): Don't
+	handle install and install-am.
+	* install.am: Do it.
+
+2001-02-26  Akim Demaille  <akim@epita.fr>
+
+	* automake.in (&handle_merge_targets, &do_one_merge_target): Don't
 	work on targets handled by %dependencies.
 	(&handle_factored_dependencies): Do it.
 	* install.am: Install install-exec, install-data and uninstall's
@@ -189,11 +195,9 @@
 
 	* automake.in: Formatting and mying changes.
 
-
 2001-02-23  Akim Demaille  <akim@epita.fr>
 
 	* automake.in: Formatting and mying changes.
-
 
 2001-02-23  Akim Demaille  <akim@epita.fr>
 
